customer, customer type, telephones and addresses